[package]
name = "input"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
# should never include "render_gl" or "render_wgpu" here!
math = { path = "../math" }
instant = { path = "../instant" }
clipboard = { path = "../clipboard" }
logging = { path = "../logging" }

bevy_app = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }

gilrs = { version = "0.10.1" }
cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3"  }
web-sys = { version = "0.3", features = [
    "Gamepad",
    "Window",
    "Navigator",
] }
wasm-bindgen = { version = "0.2" }