[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
render_gl = { path = "../render/render_gl" }
logging = { path = "../logging" }

bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }

cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3" }