[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
logging = { path = "../logging" }
bevy_http_client = { path = "../http/bevy_http_client" }
http_common = { path = "../http/http_common" }

bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }
bevy_core = { version = "0.13", default-features = false }

cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3" }
web-sys = { version = "0.3", features = [ "Window", "Location" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http_client_shared = { path = "../http/http_client_shared" }
chrono = { version = "0.4" }