[package]
name = "logging"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
log = { version = "0.4" }
tracing-subscriber = { version = "0.3.1", features = [
    "registry",
    "env-filter",
] }
tracing-log = { version = "0.1.2" }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"