[package]
name = "render_api"
version = "0.1.0"
workspace = "../.."
edition = "2021"
publish = false

[features]
default = [ "editor" ]
editor = [ "three-d/egui-gui" ]

[dependencies]
bevy_app = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_log = { version = "0.10", default-features=false }

cfg-if = { version = "1.0" }

three-d = { version = "0.15", default-features = false, features = ["window"] }