[package]
name = "render_api"
version = "0.1.0"
workspace = "../.."
edition = "2021"
publish = false

[features]

[dependencies]
# Internal Crates
# THIS SHOULD *NEVER* include render_glow, render_wgpu, or render_egui
math = { path = "../../crates/math" }

# External Crates
# should be very light on the number of dependencies
bevy_app = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_log = { version = "0.10", default-features=false }
cfg-if = { version = "1.0" }
half = {version="2", features=["std", "num-traits", "zerocopy"]}
thiserror = "1"