[package]
name = "render_api"
version = "0.1.0"
workspace = "../.."
edition = "2021"
publish = false

[features]

[dependencies]
# Internal Crates
# THIS SHOULD *NEVER* include render_glow, render_wgpu, or render_egui
math = { path = "../../crates/math" }

# External Crates
# should be very light on the number of dependencies
bevy_app = { version = "0.11", default-features=false }
bevy_ecs = { version = "0.11", default-features=false }
bevy_log = { version = "0.11", default-features=false }
bevy_utils = { version = "0.11" }
cfg-if = { version = "1.0" }
half = {version="2", features=["std", "num-traits", "zerocopy"]}
thiserror = "1"