[package]
name = "render_egui"
version = "0.1.0"
workspace = "../.."
edition = "2021"
publish = false

[features]
glow_renderer = [ "egui_glow" ]
wgpu_renderer = []

[dependencies]
# Internal Crates
# THIS SHOULD *NEVER* include render_glow or render_wgpu
render_api = { path = "../render_api" }

# External Crates
bevy_app = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_log = { version = "0.10", default-features=false }
cfg-if = { version = "1.0" }
egui = { version = "0.21" }
egui_glow = { version = "0.21", optional = true }