[package]
name = "render_egui"
version = "0.1.0"
workspace = "../.."
edition = "2021"
publish = false

[dependencies]
# Internal Crates
render_api = { path = "../render_api" }
render_glow = { path = "../render_glow" }
math = { path = "../math" }

# External Crates
bevy_app = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_log = { version = "0.10", default-features=false }
egui = { version = "0.21" }
egui_glow = { version = "0.21" }